fixed css causing the picture to be the wrong size & updated html postition of #signup-form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,8 @@ main {
   /*make main element take up any surplus space to push footer down*/
   flex: 1 0 auto;
   margin-top: 50px;
+  display: flex;
+  flex-direction: column;
 }
 /* Hero section */
 #hero {
@@ -238,10 +240,8 @@ main {
   background-color: rgba(60, 60, 60, 0.6);
 }
 
-#main{
-  display: flex;
-  flex-direction: column;
-}
+
+
 /*Media query: large or landscape phones (576px and up)*/
 @media screen and (min-width: 576px) {
   /* Gallery */
